--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "podcastr",
+  "name": "seazone-challenger",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "date-fns": "^2.21.1",
     "next": "10.1.3",
-    "rc-slider": "^9.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
